--- a/TrueEntropy/Info.plist
+++ b/TrueEntropy/Info.plist
@@ -54,5 +54,21 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+  <key>NSAppTransportSecurity</key>
+  <dict>
+      <key>NSExceptionDomains</key>
+      <dict>
+          <key>vault12.com</key>
+          <dict>
+               <key>NSExceptionRequiresForwardSecrecy</key>
+               <false/>
+               <key>NSIncludesSubdomains</key>
+               <true/>
+               <key>NSExceptionAllowsInsecureHTTPLoads</key>
+               <true/>
+          </dict>
+      </dict>
+  </dict>
+
 </dict>
 </plist>
