fix camera overlay positioning

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 *.xcodeproj/*
 !*.xcodeproj/project.pbxproj
-!*.xcodeproj/xcshareddata/
+*.xcodeproj/xcshareddata/
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 
